--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -7,6 +7,19 @@ html, body {
   height: 100%;
 }
 
+.carousel-inner {
+	margin-top: 50px;
+	height: 250px;
+}
+
+.carousel-caption {
+	color: black;
+}
+
+.carousel-inner img {
+  margin: auto;
+}
+
 
 /* footer */
 
