--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Testapp</title>
+    <title>Tim's New Hit The Lip App</title>
     <%= csrf_meta_tags %>
 
     <!-- Latest compiled and minified CSS -->
@@ -33,8 +33,9 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><%= link_to "About", static_pages_about_path %></li>
+             <li><%= link_to "Store", products_path %></li>
+             <li><%= link_to "Contact", static_pages_contact_path %></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
