--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,7 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
+            <li class="active"><%= link_to 'Home', root_path %>></li>
             <li><%= link_to "About", static_pages_about_path %></li>
              <li><%= link_to "Store", products_path %></li>
              <li><%= link_to "Contact", static_pages_contact_path %></li>
