--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -10,3 +10,18 @@
 .hit_the_lip_tshirt {
 	margin: 0 auto;
 }
+
+.col-md-6 h2,p {
+	text-align: center;
+}
+
+.main {
+	width: 100%;
+	background-color: gray;
+	color: white;
+}
+
+.panel-default {
+		padding-top: 175px;
+}
+
