--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,9 @@
   </head>
 
   <body>
+
+   <p class="notice"><%= notice %></p>
+       <p class="alert"><%= alert %></p>
   <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container nav_bar">
         <div class="navbar-header">
@@ -43,6 +46,9 @@
             <% end %></li>
           </ul>
         </div><!--/.nav-collapse -->
+
+         <p class="notice"><%= notice %></p>
+       <p class="alert"><%= alert %></p>
 
       </div>      
     </nav>
