--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,7 @@
 
    <p class="notice"><%= notice %></p>
        <p class="alert"><%= alert %></p>
+       
   <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container nav_bar">
         <div class="navbar-header">
@@ -35,15 +36,18 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><%= link_to 'Home', root_path %></li>
-            <li><%= link_to "About", static_pages_about_path %></li>
-             <li><%= link_to "Store", products_path %></li>
-             <li><%= link_to "Contact", static_pages_contact_path %></li>
-             <li><%= form_tag("/products", method: "get") do %>
+            <li class="<%= "active" if controller_name == 'static_pages' && action_name == 'landing_page' %>"><%= link_to 'Home', root_path %></li>
+            <li class="<%= "active" if controller_name == 'static_pages' && action_name == 'about' %>"><%= link_to "About", static_pages_about_path %></li>
+             <li class="<%= "active" if controller_name == 'static_pages' && action_name == 'index' %>"><%= link_to "Store", products_path %></li>
+            <li class="<%= "active" if controller_name == 'static_pages' && action_name == 'contact' %>"><%= link_to "Contact", static_pages_contact_path %></li>
+             <li>
+              <%= form_tag("/products", method: "get") do %>
               <li><%= label_tag(:q, "Search for:") %>
               <%= text_field_tag(:q) %>
               <%= submit_tag("Search") %>
-            <% end %></li>
+              </li>
+              <% end %>              
+             </li>
           </ul>
         </div><!--/.nav-collapse -->
 
