--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -7,8 +7,24 @@ html, body {
   height: 100%;
 }
 
+.alert {
+	box-shadow: none;
+}
+
+
 .navbar-fixed-top {
 	height: 15px;
+}
+
+/*search bar*/
+form { 
+	padding-top: 12px;
+	padding-left: 360px;
+}
+
+/*logout button */
+.pull-right li a {
+	padding: 15px;
 }
 
 .carousel-inner {
@@ -24,10 +40,7 @@ html, body {
   margin: auto;
 }
 
-form {
-	padding-top: 12px;
-	padding-left: 440px;
-}
+
 
 
 /* footer */
