--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,27 @@
 // Place all the styles related to the users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+.sign_up {
+	text-align: center;
+}
+
+.sign_up_table {
+	padding-left: 225px;
+	
+}
+
+input {
+	margin-top: 10px;
+}
+
+.log_in {
+	text-align: center;
+}
+.log_in_table {
+padding-left: 225px;
+	
+}
+
+	
