--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
 
    <p class="notice"><%= notice %></p>
        <p class="alert"><%= alert %></p>
-       
+
   <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container nav_bar">
         <div class="navbar-header">
@@ -48,6 +48,15 @@
               </li>
               <% end %>              
              </li>
+          </ul>
+          <ul class="nav pull-right">
+            <li>
+            <% if user_signed_in? %>
+              <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>
+              <% else %>
+              <%= link_to('Login', new_user_session_path) %>
+              <% end %>
+            </li>
           </ul>
         </div><!--/.nav-collapse -->
 
