--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -6,4 +6,13 @@
 h1 {
 	padding-top: 35px;
 }
+.col-md-offset-4{
+	margin-left: 0;
+}
+.product {
+	padding-top: 100px;
+}
 
+.product p {
+	margin-left: 0;
+}
