--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,29 +1,38 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Name:</strong>
-  <%= @product.name %>
-</p>
+<div class="container product">
+	<div class="row">
+		<div class="col-md-offset-4">
+			  <p>
+			  <strong>Image url:</strong>
+			  <%= @product.image_url %>
+			</p>
 
-<p>
-  <strong>Description:</strong>
-  <%= @product.description %>
-</p>
+			<p>
+			  <strong>Name:</strong>
+			  <%= @product.name %>
+			</p>
 
-<p>
-  <strong>Image url:</strong>
-  <%= @product.image_url %>
-</p>
+			<p>
+			  <strong>Description:</strong>
+			  <%= @product.description %>
+			</p>
+			
 
-<p>
-  <strong>Colour:</strong>
-  <%= @product.colour %>
- </p>
+			<p>
+			  <strong>Colour:</strong>
+			  <%= @product.colour %>
+			 </p>
 
- <p>
- 	<strong>Price:</strong>
- 	<%= @product.price %>
- </p>
+			 <p>
+			 	<strong>Price:</strong>
+			 	<%= @product.price %>
+			 </p>
+		 </div>
+	 </div>
+ </div>
+
+ <%= @product.highest_rating_comment %>
 
 <%= link_to 'Edit', edit_product_path(@product) %> |
 <%= link_to 'Back', products_path %>
