--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -6,9 +6,25 @@
 h1 {
 	padding-top: 35px;
 }
-.col-md-offset-4{
+.col-md-offset-4 {
 	margin-left: 0;
 }
+
+.review {
+	padding-left: 457px;
+    margin-top: 25px;
+}
+
+.rating {
+	text-align: center;
+}
+
+#new_comment {
+	padding-left: 0;
+	margin-left: 0;
+}
+
+
 .product {
 	padding-top: 100px;
 }
