--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -24,10 +24,15 @@
 			  <%= @product.colour %>
 			 </p>
 
+			 <p>Average Rating: <div class="rated" data-score="<%= @product.average_rating %>"></div>
+			 </p>
+
 			 <p>
 			 	<strong>Price:</strong>
 			 	<%= @product.price %>
 			 </p>
+
+			  <%= render partial: "new_comment" %>
 		 </div>
 	 </div>
  </div>
