--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -6,13 +6,14 @@
 h1 {
 	padding-top: 35px;
 }
-.col-md-offset-4 {
-	margin-left: 0;
+.product {
+	width: 100%;
+	text-align: center;
 }
 
+
 .review {
-	padding-left: 457px;
-    margin-top: 25px;
+	margin-top: 25px;
 }
 
 .rating {
@@ -27,8 +28,10 @@ h1 {
 
 .product {
 	padding-top: 100px;
+
 }
 
 .product p {
 	margin-left: 0;
+	margin-right: 0;
 }
