--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -31,6 +31,7 @@
 			 </p>
 
 			  <%= render partial: "new_comment" %>
+			  <%= render partial: "comments" %>
 			  <%= will_paginate @comments %>
 	 </div>
 
