--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -30,6 +30,10 @@
 			 	<%= @product.price %>
 			 </p>
 
+			 <%= form_tag "/payments/create" do %>
+			 	<%= render partial: "shared/stripe_checkout_button" %>
+			 <% end %>
+
 			  <%= render partial: "new_comment" %>
 			  <%= render partial: "comments" %>
 			  <%= will_paginate @comments %>
