--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -31,6 +31,7 @@
 			 </p>
 
 			 <%= form_tag "/payments/create" do %>
+			 	<%= hidden_field_tag(:product_id, @product.id) %>
 			 	<%= render partial: "shared/stripe_checkout_button" %>
 			 <% end %>
 
