--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -31,9 +31,9 @@ h1 {
 
 }
 
-.product p {
-	margin-left: 0;
-	margin-right: 0;
+.img-responsive {
+	margin-left: auto;
+    margin-right: auto;
 }
 
 #stripe-button {
