--- a/app/views/products/_comments.html.erb
+++ b/app/views/products/_comments.html.erb
@@ -1,5 +1,5 @@
 <div class="product_reviews">
 	<% @comments.each do |comment| %>
-		(%= render comment %>)
+		<%= render comment %>
 	<% end %>
 </div>
