--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,12 +1,14 @@
 <div class="col-md-4 col-sm-6">
-          <h1><%= product.name %></h1>
-          <%= image_tag(product.image_url, class: "img-responsive") %>
-          <p><%= product.description %></p>
-          <p><%= product.colour %></p>
-          <p><%= product.price %></p>    
-             
-    
-        <td><%= link_to 'Show', product %></td>
-        <td><%= link_to 'Edit', edit_product_path(product) %></td>
-        <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        </div>
+	<% cache product do %>
+	          <h1><%= product.name %></h1>
+	          <%= image_tag(product.image_url, class: "img-responsive") %>
+	          <p><%= product.description %></p>
+	          <p><%= product.colour %></p>
+	          <p><%= product.price %></p>    
+	             
+	    
+	        <td><%= link_to 'Show', product %></td>
+	        <td><%= link_to 'Edit', edit_product_path(product) %></td>
+	        <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+	<% end %>
+</div>
