--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -3,7 +3,7 @@
 
 	<div class="product">
 		  <p>
-			 <%= image_tag(@product.image_url, width: "200", class: "img-zoom img-responsive", data_zoom_image: @product.image_url) %>
+			 <%= image_tag(@product.image_url, width: "200", class: "img-zoom img-responsive", data_zoom_image: "@product.image_url") %>
 			</p>
 
 			<p>
@@ -22,7 +22,7 @@
 			  <%= @product.colour %>
 			 </p>
 
-			 <p>Average Rating: <div class="rated" data-score="<%= @product.average_rating %>"></div>
+			 <p>Average Rating: <div class="rated" id="average-rating" data-score="<%= @product.average_rating %>"></div>
 			 </p>
 
 			 <p>
