--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -1,3 +1,4 @@
 $("#new_comment").html("Thank you for your review!");
-&('.product-review').prepend("<%= j render @comment %>");
-$(document).on('turbolinks:load ajaxSuccess', function ();
+$(".product-reviews").prepend("<%= j render @comment %>");
+$(document).on('turbolinks:load ajaxSuccess', function (){
+$("#average-rating").attr('data-score', "<%= @product.average_rating %>");
