--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -13,10 +13,6 @@
 	
 }
 
-input {
-	margin-top: 10px;
-}
-
 .log_in {
 	text-align: center;
 	padding-top: 150px;
@@ -32,3 +28,6 @@ padding-left: 225px;
 padding-top: 25px;
 }
 	
+#contact-form {
+	padding-left: 150px;
+}
