--- a/app/views/static_pages/landing_page.html.erb
+++ b/app/views/static_pages/landing_page.html.erb
@@ -35,17 +35,32 @@
 <div class="container main">
       <!-- Example row of columns -->
       <div class="row">
-        <div class="col-md-6 main-section">
+        <div class="col-md-6 main-section mens">
           <h2>Men's</h2>
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
         </div>
         <div class="col-md-6 main-section">
+          <img src= "https://www.surfingindia.net/files/surf-files/u9/India_Surf_Tours_-_17__1_.jpg", class="img-responsive">
+        </div>
+
+        <div class="col-md-6 main-section-2">
+          <img src="https://hobiesurfshops.files.wordpress.com/2012/08/keala.gif", class="img-responsive">
+        </div>
+
+
+        <div class="col-md-6 main-section-2 womens">
           <h2>Women's</h2>
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-       </div>
+       </div>        
      </div>
+  </div>
+
+  <footer>
+    <%= image_tag("hittheliplogo.png", class: "footer_logo") %>
+
+  </footer>
 
 
 
