--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -19,7 +19,7 @@ html, body {
 /*search bar*/
 form { 
 	padding-top: 12px;
-	padding-left: 360px;
+	padding-left: 315px;
 }
 
 /*logout button */
@@ -40,8 +40,41 @@ form {
   margin: auto;
 }
 
+.main-section {	
+	padding: 0;
+}
 
+.mens {
+	padding-top: 75px;
+}
+
+.main-section-2 {
+	padding: 0;
+}
+
+.womens {
+	padding-top: 75px;
+}
 
 
 /* footer */
+
+footer {
+	height: 100px;
+	background-color: #4c4c4c
+}
+
+.footer_logo {
+	height: 100px;
+	width: auto;
+}
+
+.contact {
+	float: left;
+}
+
+#address {
+	font-size: 1.2em;
+	text-align: center;
+}
 
