--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,23 +1,39 @@
 <h1>Contact Hit The Lip</h1>
 <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
 
- <%= flash[:notice] %>
- <%= form_tag("/static_pages/thank_you") do %>
-<div class="row">
-  <div class="col-md-4">
-    <div class="form-group">
-      <%= label_tag :name %>
-      <%= text_field_tag :name, nil, class: "form-control", placeholder: "Enter Name" %>
-    </div>      
-    <div class="form-group">
-      <%= label_tag :email, "Email Address" %>
-      <%= text_field_tag :email, nil, class: "form-control", placeholder: "Enter Email" %>
+ <div class="container-fluid">
+  <div class="row">    
+    <%= flash[:notice] %>
+     <%= form_tag("/static_pages/thank_you", :id => "contact-form") do %>
+      <div class="row">
+        <div class="col-md-6">
+          <div class="form-group">
+            <%= label_tag :name %>
+            <%= text_field_tag :name, nil, class: "form-control", placeholder: "Enter Name" %>
+          </div>      
+          <div class="form-group">
+            <%= label_tag :email, "Email Address" %>
+            <%= text_field_tag :email, nil, class: "form-control", placeholder: "Enter Email" %>
+          </div>
+          <div class="form-group">
+            <%= label_tag :message %>
+            <%= text_area_tag :message, nil, class: "form-control", placeholder: "Enter Message" %>
+          </div>      
+        
+      
+      <%= submit_tag "Send" %>   
+      <% end %>
+      </div>
+    
+
+    <div class="col-md-6" id="address">
+      <h3> Address</h3>
+      <address>
+        123 Oceanside Avenue<br>
+        San Diego<br>
+        California<br>
+      </address>
+      </div>
+      </div>
     </div>
-    <div class="form-group">
-      <%= label_tag :message %>
-      <%= text_area_tag :message, nil, class: "form-control", placeholder: "Enter Message" %>
-    </div>      
   </div>
-</div>
-<%= submit_tag "Send" %>   
-<% end %>
