--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,6 +1,7 @@
 <p id="notice"><%= notice %></p>
 
-
+<div class="container">
+  <div class="row" data-product-id="<%= @product.id %>"
 	<div class="product">
 		  <p>
 			 <%= image_tag(@product.image_url, width: "200", class: "img-zoom img-responsive", data_zoom_image: "@product.image_url") %>
@@ -37,6 +38,7 @@
 			 
 
 			  <%= render partial: "new_comment" %>
+			  <div class="alert alert-info" style="display:none" role="alert">A new comment was posted!</div>
 			  <%= render partial: "comments" %>
 			  <%= will_paginate @comments %>
 	 </div>
