--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -4,14 +4,13 @@
 
         <% if current_user && current_user.admin? %>
          
-   				<%= link_to ('<span class="glyphicon glyphicon-remove"></span>').html_safe, product_comment_path(comment.product, comment), method: :delete, data: { confirm: 'Are you sure?' } %>
-    		
+   				<%= link_to ('<span class="glyphicon glyphicon-remove"></span>').html_safe, product_comment_path(comment.product, comment), method: :delete, data: { confirm: 'Are you sure?' } %>    		
     		  <% end %>
         </p>
-
-        <p><div class="rated" id="average-rating" data-score="<%= comment.rating %>"></div></p>
+      <div class="rated" id="average-rating" data-score="<%= comment.rating %>"></div>
         <p><%= comment.body %></p>
-        <hr>
+    
+        
   </div>
 </div>
 
