--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -1,3 +1,4 @@
+$('.product-reviews').prepend("<%= j render @comment %>");
 $("#new_comment").html("Thank you for your review!");
 $(document).on('turbolinks:load ajaxSuccess', function (){
 $("#average-rating").attr('data-score', "<%= @product.average_rating %>");
