--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,7 +1,8 @@
 <p id="notice"><%= notice %></p>
 
+<% cache @product do %>
 <div class="container">
-  <div class="row" data-product-id="<%= @product.id %>"
+  <div class="row" data-product-id="<%= @product.id %>">
 	<div class="product">
 		  <p>
 			 <%= image_tag(@product.image_url, width: "200", class: "img-zoom img-responsive", data_zoom_image: "@product.image_url") %>
@@ -43,7 +44,7 @@
 			  <%= will_paginate @comments %>
 	 </div>
 
- <%= @product.highest_rating_comment %>
+<% end %>
 
-<%= link_to 'Edit', edit_product_path(@product) %> |
+ <%= link_to 'Edit', edit_product_path(@product) %> |
 <%= link_to 'Back', products_path %>
