--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -1,4 +1,4 @@
-$('.product-reviews').prepend("<%= j render @comment %>");
 $("#new_comment").html("Thank you for your review!");
-$(document).on('turbolinks:load ajaxSuccess', function (){
+$('.product-reviews').prepend("<%= j render @comment %>");
 $("#average-rating").attr('data-score', "<%= @product.average_rating %>");
+refreshRating();
