--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -24,3 +24,15 @@
 		padding-top: 175px;
 }
 
+.shirt_image {
+	margin-top: 0;
+}
+
+.edit_prod {
+	text-align: center;
+}
+
+.edit_prod a {
+	padding-right: 10px;
+	text-align: center;
+}
