--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,14 +1,16 @@
 <div class="col-md-4 col-sm-6">
 	<% cache product do %>
-	          <h1><%= product.name %></h1>
+	          <h1 class="shirt_image"><%= product.name %></h1>
 	          <%= image_tag(product.image_url, class: "img-responsive") %>
 	          <p><%= product.description %></p>
 	          <p><%= product.colour %></p>
 	          <p><%= product.price %></p>    
 	             
 	    
-	        <td><%= link_to 'Show', product %></td>
-	        <td><%= link_to 'Edit', edit_product_path(product) %></td>
-	        <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+	        <div class="edit_prod">
+		        <td><%= link_to 'Show', product %></td>
+		        <td><%= link_to 'Edit', edit_product_path(product) %></td>
+		        <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+		     </div>
 	<% end %>
 </div>
