--- a/app/views/shared/_stripe_checkout_button.html.erb
+++ b/app/views/shared/_stripe_checkout_button.html.erb
@@ -4,5 +4,5 @@
   data-image="<%= asset_path @product.image_url %>"
   data-name="<%= @product.name %>"
   data-description="<%= @product.description %>"
-  data-amount="<%= @product.price %>">
+  data-amount="<%= @product.price * 100 %>">
 </script>
