--- a/app/views/payments/create.html.erb
+++ b/app/views/payments/create.html.erb
@@ -2,7 +2,7 @@
 	<div class="row">
 		<div class="col-md-offset-3">
 			<h2> Thank you for your purchase at Hit The Lip.</h2>
-			<h3>If you have any questions or comments, please feel free to rach out to us</h3>
+			<h3>If you have any questions or comments, please feel free to reach out to us</h3>
 			<%= link_to 'Back to store', product_path(@product) %>
 		</div>
 	</div>
