--- a/app/views/user_mailer/paid_success.html.erb
+++ b/app/views/user_mailer/paid_success.html.erb
@@ -2,4 +2,4 @@
     
   <p>T-Shirt: <%= @product.name %></p>
     
-  <p>Price: $<%= @product.price / 100 %></p>
+  <p>Price: $<%= @product.price %></p>
