--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -2,6 +2,35 @@ body {
 padding-top: 50px;
 }
 
+.nav_bar {
+	height: 50px;
+}
+
+.main_container {
+	background-image: url(SURF-IN-BW.jpg);
+	background-repeat: no-repeat;
+	background-size: cover;
+	text-align: center;
+	top: 0;
+	width: 100%;
+	height: 600px;
+}
+
+.h1_heading {
+	color: white;
+	text-align: center;
+	margin: 0;
+	padding-top: 295px;
+}
+
+.go_to_store {
+	position: absolute;
+	margin-top: 15px;
+	color: white;
+	background-color: red;
+	border: none;
+}
+
 .hp_head {
 	text-align: center;
 	padding-top: 75px;
@@ -40,5 +69,3 @@ padding-top: 50px;
 	padding-right: 10px;
 	text-align: center;
 }
-
-
