--- a/app/views/static_pages/landing_page.html.erb
+++ b/app/views/static_pages/landing_page.html.erb
@@ -2,7 +2,7 @@
 
 <div class="main_container">
   <h1 class="h1_heading">Welcome to Hit The Lip</h1>
-  <button class="go_to_store">Go To Store</button>
+  <button class="go_to_store"><%= link_to "Store", products_path %></button>
 </div>
 
 <div class="container main">
@@ -11,7 +11,7 @@
         <div class="col-md-6 main-section mens">
           <h2>Men's</h2>
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <p><a class="btn btn-default" href="products" role="button">View details &raquo;</a></p>
         </div>
         <div class="col-md-6 main-section">
           <img src= "https://www.surfingindia.net/files/surf-files/u9/India_Surf_Tours_-_17__1_.jpg", class="img-responsive">
@@ -25,7 +25,7 @@
         <div class="col-md-6 main-section-2 womens">
           <h2>Women's</h2>
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <p><a class="btn btn-default" href="products" role="button">View details &raquo;</a></p>
        </div>
      </div>
   </div>
